# ai_research_system

./: .gitignore  README.md  main.py  pyproject.toml
model/: README.md
model/calculators/: advanced_technical_calculator.py  calculator_base.py  financial_calculator.py  macro_sensitivity_calculator.py  peer_intelligence_calculator.py  technical_calculator.py  volume_positioning_calculator.py
model/core/: config.py  stock_master.yaml  thesis_types.py  types.py
model/orchestration/: stock_analytics_orchestrator.py  thesis_validation_orchestrator.py
model/prompts/: __init__.py  output_schemas.py  perplexity_research_prompts.py  ten_k_prompts.py  ten_k_schemas.py  thesis_validation_prompts.py  thesis_validation_schemas.py
model/services/: fred_provider.py  index_provider.py  peer_discovery_provider.py  perplexity_research_provider.py  research_data_provider.py  sec_filing_manager.py  stock_data_provider.py  ten_k_orchestrator.py  ten_k_processor.py
model/tests/: __init__.py
model/tests/stock_analytics/: __init__.py  conftest.py  test_advanced_technical_calculator.py  test_financial_calculator.py  test_index_provider.py  test_macro_sensitivity_calculator.py  test_peer_discovery_provider.py  test_peer_intelligence_calculator.py  (+5 more)
model/thesis_agents/: aggregation_diagnostics.py  counterfactual_research.py  financial_translation.py  half_life_estimator.py  llm_helper.py  narrative_decomposition.py  red_team.py  thesis_validity_evaluator.py
scripts/: model_snow_example.ipynb  run_stage1_demo.py  run_thesis_example.py  snow_time_series_example.ipynb
(+11 files in other folders)
